# generic-productivity-ai-agent

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  utils.py
.slingshot/code-tagging/: 2080349c-lock.json  7d7ba11e-lock.json  e77bf310-lock.json
agent_docs/: a2a_manifest.yaml
api/: routes.py
feedback/: feedback_loop.py
graph/: nodes.py  workflow.py
mcp/: mcp_adapter.py  tool_registry.py
mcp/tools/: calendar.py
memory/: experience_store.py  mem0_client.py  vector_memory.py
prompts/: base_prompt.txt
reflection/: self_reflection.py
skills/: calendar.yaml
ui/: README.md  index.html  package.json
ui/src/: App.jsx  styles.css
