[project]
name = "generic-productivity-ai-agent"
version = "0.1.0"
description = "AI Agent for Productivity"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "fastapi>=0.121.0",
    "fastmcp>=2.13.0.2",
    "langchain>=1.0.4",
    "langfuse>=3.9.1",
    "langgraph>=1.0.2",
    "litellm>=1.79.1",
    "mem0ai>=1.0.0",
    "pgvector>=0.4.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "spacy>=3.8.7",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]
